WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220472
[Mac] Netflix controls do not fade out after entering fullscreen
https://bugs.webkit.org/show_bug.cgi?id=220472
Summary
[Mac] Netflix controls do not fade out after entering fullscreen
Jer Noble
Reported
2021-01-08 12:04:05 PST
[Mac] Netflix controls do not fade out after entering fullscreen
Attachments
Patch
(12.69 KB, patch)
2021-01-08 12:09 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(11.39 KB, patch)
2021-01-13 16:54 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.44 KB, patch)
2021-01-20 10:28 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-01-08 12:04:41 PST
<
rdar://70602577
>
Jer Noble
Comment 2
2021-01-08 12:09:10 PST
Created
attachment 417289
[details]
Patch
Jer Noble
Comment 3
2021-01-13 16:54:07 PST
Created
attachment 417583
[details]
Patch
Eric Carlson
Comment 4
2021-01-13 17:38:16 PST
Comment on
attachment 417583
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417583&action=review
> Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm:401 > + // FIXME(53342): remove once pointer events fire when elements move out from under the pointer.
2011!
> Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm:408 > + eventNumber:0 clickCount:0 pressure:0];
Nit: is there any reason to not put these an separate lines like the others?
Jer Noble
Comment 5
2021-01-13 21:29:51 PST
(In reply to Eric Carlson from
comment #4
)
> Comment on
attachment 417583
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=417583&action=review
> > > Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm:401 > > + // FIXME(53342): remove once pointer events fire when elements move out from under the pointer. > > 2011!
Yeah. :-/
> > Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm:408 > > + eventNumber:0 clickCount:0 pressure:0]; > > Nit: is there any reason to not put these an separate lines like the others?
Not really; it's a bit of copy-pasta.
Jer Noble
Comment 6
2021-01-20 10:28:55 PST
Created
attachment 417980
[details]
Patch for landing
EWS
Comment 7
2021-01-20 11:02:01 PST
Committed
r271656
: <
https://trac.webkit.org/changeset/271656
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417980
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug